--- a/arch/arm64/configs/polaris_defconfig
+++ b/arch/arm64/configs/polaris_defconfig
@@ -1793,7 +1793,7 @@ CONFIG_MD=y
 # CONFIG_BLK_DEV_MD is not set
 # CONFIG_BCACHE is not set
 CONFIG_BLK_DEV_DM_BUILTIN=y
-CONFIG_BLK_DEV_DM=m
+CONFIG_BLK_DEV_DM=y
 # CONFIG_DM_DEBUG is not set
 CONFIG_DM_BUFIO=m
 # CONFIG_DM_DEBUG_BLOCK_MANAGER_LOCKING is not set
@@ -1814,6 +1814,7 @@ CONFIG_DM_THIN_PROVISIONING=m
 # CONFIG_DM_MULTIPATH is not set
 # CONFIG_DM_DELAY is not set
 # CONFIG_DM_DUST is not set
+# CONFIG_DM_INIT is not set
 # CONFIG_DM_UEVENT is not set
 # CONFIG_DM_FLAKEY is not set
 # CONFIG_DM_VERITY is not set
@@ -2967,7 +2968,7 @@ CONFIG_CHARGER_BQ25890=m
 # CONFIG_CHARGER_RT9455 is not set
 # CONFIG_CHARGER_UCS1002 is not set
 # CONFIG_CHARGER_BD99954 is not set
-CONFIG_BATTERY_PMI8998_FG=m
+CONFIG_BATTERY_PMI8998_FG=y
 CONFIG_HWMON=y
 # CONFIG_HWMON_DEBUG_CHIP is not set
 
@@ -5067,7 +5068,7 @@ CONFIG_DMA_OF=y
 # CONFIG_XILINX_ZYNQMP_DMA is not set
 # CONFIG_XILINX_ZYNQMP_DPDMA is not set
 CONFIG_QCOM_BAM_DMA=y
-CONFIG_QCOM_GPI_DMA=m
+CONFIG_QCOM_GPI_DMA=y
 CONFIG_QCOM_HIDMA_MGMT=y
 CONFIG_QCOM_HIDMA=y
 # CONFIG_DW_DMAC is not set
@@ -5253,7 +5254,7 @@ CONFIG_COMMON_CLK_QCOM=y
 CONFIG_QCOM_A53PLL=y
 # CONFIG_QCOM_A7PLL is not set
 CONFIG_QCOM_CLK_APCS_MSM8916=y
-# CONFIG_QCOM_CLK_APCC_MSM8996 is not set
+CONFIG_QCOM_CLK_APCC_MSM8996=y
 # CONFIG_QCOM_CLK_APCS_SDX55 is not set
 CONFIG_QCOM_CLK_SMD_RPM=y
 CONFIG_QCOM_CLK_RPMH=y
@@ -5262,12 +5263,12 @@ CONFIG_QCOM_CLK_RPMH=y
 # CONFIG_IPQ_APSS_PLL is not set
 # CONFIG_IPQ_APSS_6018 is not set
 # CONFIG_IPQ_GCC_4019 is not set
-CONFIG_IPQ_GCC_6018=y
+CONFIG_IPQ_GCC_6018=m
 # CONFIG_IPQ_GCC_806X is not set
 # CONFIG_IPQ_LCC_806X is not set
-CONFIG_IPQ_GCC_8074=y
+CONFIG_IPQ_GCC_8074=m
 # CONFIG_MSM_GCC_8660 is not set
-CONFIG_MSM_GCC_8916=y
+CONFIG_MSM_GCC_8916=m
 # CONFIG_MSM_GCC_8939 is not set
 # CONFIG_MSM_GCC_8960 is not set
 # CONFIG_MSM_LCC_8960 is not set
@@ -5278,14 +5279,14 @@ CONFIG_MSM_GCC_8916=y
 # CONFIG_MSM_MMCC_8974 is not set
 CONFIG_MSM_GCC_8994=y
 CONFIG_MSM_GCC_8996=y
-CONFIG_MSM_MMCC_8996=y
+# CONFIG_MSM_MMCC_8996 is not set
 CONFIG_MSM_GCC_8998=y
-# CONFIG_MSM_GPUCC_8998 is not set
-# CONFIG_MSM_MMCC_8998 is not set
-CONFIG_QCS_GCC_404=y
+CONFIG_MSM_GPUCC_8998=y
+CONFIG_MSM_MMCC_8998=y
+CONFIG_QCS_GCC_404=m
 # CONFIG_SC_CAMCC_7180 is not set
 # CONFIG_SC_DISPCC_7180 is not set
-CONFIG_SC_GCC_7180=y
+CONFIG_SC_GCC_7180=m
 # CONFIG_SC_GCC_7280 is not set
 # CONFIG_SC_GCC_8180X is not set
 # CONFIG_SC_LPASS_CORECC_7180 is not set
@@ -5302,20 +5303,19 @@ CONFIG_SDM_GCC_845=y
 CONFIG_SDM_GPUCC_845=y
 CONFIG_SDM_VIDEOCC_845=y
 CONFIG_SDM_DISPCC_845=y
-# CONFIG_SDM_LPASSCC_845 is not set
+CONFIG_SDM_LPASSCC_845=m
 # CONFIG_SDX_GCC_55 is not set
-CONFIG_SM_DISPCC_8250=y
-CONFIG_SM_GCC_8150=y
-CONFIG_SM_GCC_8250=y
+# CONFIG_SM_GCC_8150 is not set
+# CONFIG_SM_GCC_8250 is not set
 # CONFIG_SM_GCC_8350 is not set
-CONFIG_SM_GPUCC_8150=y
-CONFIG_SM_GPUCC_8250=y
+# CONFIG_SM_GPUCC_8150 is not set
+# CONFIG_SM_GPUCC_8250 is not set
 # CONFIG_SM_VIDEOCC_8150 is not set
 # CONFIG_SM_VIDEOCC_8250 is not set
 # CONFIG_SPMI_PMIC_CLKDIV is not set
 CONFIG_QCOM_HFPLL=y
 # CONFIG_KPSS_XCC is not set
-CONFIG_CLK_GFM_LPASS_SM8250=m
+# CONFIG_CLK_GFM_LPASS_SM8250 is not set
 # CONFIG_XILINX_VCU is not set
 CONFIG_HWSPINLOCK=y
 CONFIG_HWSPINLOCK_QCOM=y
@@ -5446,6 +5446,7 @@ CONFIG_QCOM_CPR=y
 CONFIG_QCOM_GENI_SE=y
 CONFIG_QCOM_GSBI=y
 CONFIG_QCOM_LLCC=y
+CONFIG_QCOM_KRYO_L2_ACCESSORS=y
 CONFIG_QCOM_MDT_LOADER=y
 CONFIG_QCOM_OCMEM=y
 CONFIG_QCOM_PDR_HELPERS=y
@@ -6275,7 +6276,7 @@ CONFIG_NFS_V4=y
 CONFIG_NFS_V4_1=y
 CONFIG_NFS_V4_2=y
 CONFIG_PNFS_FILE_LAYOUT=y
-CONFIG_PNFS_BLOCK=m
+CONFIG_PNFS_BLOCK=y
 CONFIG_PNFS_FLEXFILE_LAYOUT=y
 CONFIG_NFS_V4_1_IMPLEMENTATION_ID_DOMAIN="kernel.org"
 # CONFIG_NFS_V4_1_MIGRATION is not set
